# pharos

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build-npm.sh  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/demo/: demo-setup.sh  demo.tape  pharos-output.txt
.github/workflows/: ci.yml  deploy-website.yml  release.yml
scripts/: install.js
src/: lockfile.rs  lockfile_tests.rs  main.rs  main_tests.rs  manifest.rs  manifest_tests.rs  registry.rs  registry_tests.rs  remediation.rs  remediation_tests.rs  search.rs  search_tests.rs  utils.rs  utils_tests.rs
tests/: cli.rs
website/: CHANGELOG.md  next.config.mjs  package-lock.json  package.json
website/public/: site.webmanifest
website/src/app/: layout.tsx  page.md  providers.tsx  robots.ts  sitemap.ts
website/src/app/docs/ci-json/: layout.tsx  page.md
website/src/app/docs/cli/: layout.tsx  page.md
website/src/app/docs/limitations/: layout.tsx  page.md
website/src/app/docs/lockfiles/: layout.tsx  page.md
website/src/app/docs/understanding-output/: layout.tsx  page.md
website/src/components/: AnimatedPharosOutput.tsx  Button.tsx  Callout.tsx  DocsHeader.tsx  Hero.tsx  Layout.tsx  Logo.tsx  Navigation.tsx  Prose.tsx  QuickLinks.tsx  Search.tsx  TableOfContents.tsx  ThemeSelector.tsx
website/src/lib/: navigation.ts  seo.ts
website/src/styles/: prism.css  tailwind.css
