[package]
name = "pharos"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
ignore = "0.4.25"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
yarn-lock-parser = "0.12.0"
