[package]
name = "pharos"
version = "0.1.0"
edition = "2021"
authors = ["Vasilis Kortsimelidis"]
description = "A CLI tool to help upgrade vulnerable JavaScript packages by analyzing dependency chains"
readme = "README.md"
homepage = "https://github.com/VasilisK/pharos"
repository = "https://github.com/VasilisK/pharos"
license = "MIT"
keywords = ["security", "dependencies", "npm", "yarn", "vulnerabilities"]
categories = ["command-line-utilities", "development-tools"]



[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.1.1"
ignore = "0.4.25"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
yarn-lock-parser = "0.12.0"
